--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "dev": "nodemon index.js"
+    "start": "node index.js",
+     "dev": "nodemon index.js"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
